# Compiladores2_T1_P1

./: .gitignore
Prueba1_P12019/: lexer.l  tokens.h
Prueba1_P12019/tests/: CMakeLists.txt  test_lexer.cpp
Prueba2_RE2C_P12019/src/: expr_lexer.h  expr_lexer.re
Prueba2_RE2C_P12019/src/tests/: CMakeLists.txt  test_lexer.cpp
Prueba3_P12019/: .directory  Solucion.txt  ast.cpp  ast.h  expr.l  expr.y  input1.txt  input2.txt  main.cpp
Prueba_Treecc_P12019/: expr_ast.tc
Prueba_Treecc_P12019/tests/: CMakeLists.txt  test_ast.cpp
Tarea1/: Lexer.cpp  Lexer.h  Parser.cpp  Tokens.h  input.txt  main.cpp  tarea1.l  test
Tarea1/tests/: CMakeLists.txt  parser.cpp
Tarea2/: Tokens.h  input.txt  tarea2.l
Tarea2/tests/: CMakeLists.txt  main.cpp  parser.cpp
flex_bison/: ast.cpp  ast.h  ejer  input.txt  lex.yy.c  lexer.l  parser.tab.c  parser.tab.h  parser.y
flex_bison_treecc/: CMakeLists.txt  ast.tc  lexer.l  main.cpp  parser.out  parser.y
flex_bison_treecc/inputs/: input1.txt
